# wizepair2

./: .dockerignore  .gitignore  Dockerfile  README.md  batch.py  batch.sh  bigquery.sh  cloudrun.sh  environment.yaml  environment.yml  environment_py2.yaml  job.json  main.py  mmpa.out  mmpa.rxn  pyproject.toml  requirements.txt  test.sh  unit_tests.py
app/: __init__.py  views.py
batch/: elo_batch.py  elo_batch.sh  elo_job.json  mmp_batch.py  mmp_batch.sh  mmp_job.json
classes/: mmp.py
gcp/: elo_batch.yaml  mmp_batch.yaml  mmp_batch.yaml.backup  quick_test.json
mmpa/: __main__.py  chem.py  mmp.py  mmpa.in  mmpa.out  mmpa.rxn
mmpa/wizepair2/: __main__.py
notebooks/: beta2_agonists.chembl  beta2_agonists.ipynb  beta2_agonists_2.ipynb  beta2_agonists_part1.ipynb  beta2_agonists_part2.ipynb  beta2_agonists_part3.ipynb  beta2_agonists_part4.ipynb  dev-gt.ipynb  dev-nx.ipynb  examples.ipynb  hdac1_inhibitors.ipynb  hdac1_inhibitors_part1.ipynb  hdac1_inhibitors_part2.ipynb  hdac1_inhibitors_part3.ipynb  hdac1_inhibitors_part4.ipynb  pmc-gt.ipynb  pmc-nx.ipynb  skelo.ipynb
notebooks/beta2/: beta2_agonists.chembl  beta2_agonists_part1.ipynb  beta2_agonists_part2.ipynb  beta2_agonists_part3.ipynb  beta2_agonists_part4.ipynb
notebooks/hdac1/: hdac1_inhibitors.chembl  hdac1_inhibitors_part1.ipynb  hdac1_inhibitors_part2.ipynb  hdac1_inhibitors_part3.ipynb  (+1 more)
sql/: calculate_deltas.sql  call_cloud_run.sql  create_remote_function.sql  distinct_requests.sql  elo_ingestion.sql  elo_training.sql  elo_training_base.sql  proba_predictions.sql  random_pchembl_extract.sql
(+9 files in other folders)
