[project]
name = "wizepair2"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdkit (>=2023.03.1)",
    "flask (>=2.1.2,<3.0)",
    "pandas (>=1.3.5,<2.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "networkx (>=2.6.3)",
    "func-timeout (>=4.3.5,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "skelo (==0.1.5)",
    "google-cloud-logging (>=3.11.4,<4.0.0)",
    "pandarallel (>=1.6.5,<2.0.0)",
    "jupyterlab",
    "ipywidgets",
    "matplotlib",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
