[tool.poetry]
name = "wizepair2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pytest = ">=8.3.5,<9.0.0"
rdkit = ">=2023.03.1"
fastapi = ">=0.115.12,<1.0.0"
pydantic = ">=2.11.3,<3.0.0"
uvicorn = ">=0.34.2,<1.0.0"
pandas = ">=2.2.0,<2.3.0"
numpy = ">=1.26.4,<2.0.0"
networkx = ">=2.6.3,<3.0.0"
func-timeout = ">=4.3.5,<5.0.0"
skelo = "==0.1.5"
google-cloud-logging = ">=3.11.4,<4.0.0"
pandarallel = ">=1.6.5,<2.0.0"
jupyterlab = "*"
ipywidgets = "*"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
